PyQuest/src/test/semantic_analysis/valid/test008.ql
// Identifier dependant on second, second dependant on third
form testForm {
	"First Question"
	firstIdentifier : integer = secondIdentifier + 1
	"Second Question"
	secondIdentifier : integer = thirdIdentifier + 1
	"Third Question"
	thirdIdentifier : integer
}