PyQuest/src/test/semantic_analysis/invalid/test006.ql
// Identifiers dependent on each other (symmetric)
form testForm {
	"First Question"
	firstIdentifier : integer = secondIdentifier + 1
	"Second Question"
	secondIdentifier : integer = firstIdentifier + 1
}
